2017-12-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.29 released.

2017-12-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.28 released.

2017-11-08  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.

2017-10-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.27 released.

2017-10-13  Carl Hetherington  <cth@carlh.net>

	* Colour axis labels in the audio plot (#835).

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.26 released.

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.25 released.

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2017-10-05  Carl Hetherington  <cth@carlh.net>

	* Add config option to control writer's
	maximum_frames_in_memory.

2017-10-04  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

2017-10-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.24 released.

2017-09-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.23 released.

2017-09-20  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-09-03  Carl Hetherington  <cth@carlh.net>

	* Make Cmd+W work on OS X (#934).

2017-09-02  Carl Hetherington  <cth@carlh.net>

	* Remember the last directory used when opening DCPs in the player (#1121).

	* Build with a version of libopenjpeg derived from 2.2.0.

2017-09-01  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.22 released.

2017-09-01  Carl Hetherington  <cth@carlh.net>

	* Fix corruption of an existing DCP when a new one is made with the same video
	asset (#1126).

2017-08-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.21 released.

2017-08-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.20 released.

2017-08-31  Carl Hetherington  <cth@carlh.net>

	* Fix erroneous re-use of video files after turning off burnt subtitles (#1113).
