@@ -1,3 +1,7 @@
+2017-12-17  Carl Hetherington  <cth@carlh.net>
+
+	* Display decode resolution in the player.
+
 2017-12-13  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.11.29 released.
